@@ -1,3 +1,14 @@
+2008-09-23  Richard Hult  <richard@imendio.com>
+
+        Reviewed by Alp Toker. Landed by Jan Alonzo.
+
+        http://bugs.webkit.org/show_bug.cgi?id=20582
+        [Gtk] Link error on Mac OS X
+
+        * GNUmakefile.am: Only use the -version-script flag for the gnu
+        linker.
+        * configure.ac: Check for GNU OSes.
+
 2008-09-19  Alp Toker  <alp@nuanti.com>
 
         Build fix for the 'gold' linker and recent binutils. New behaviour
